Fix mineurs sur l'alignement et le visuel des menus de la carte en responsive.

--- a/assets/css/_mixins.scss
+++ b/assets/css/_mixins.scss
@@ -48,7 +48,7 @@
 	// Titres des sections de la carte
 	@mixin carte-titre{
 		margin: 0; width: calc(100% - 600px); text-align: center; font-size: 26px; margin-top: -10px;
-		@include mobile{width: calc(100% - 200px); font-size: 14px;margin-top: -5px;}
+		@include mobile{width: calc(100% - 200px); font-size: 14px;margin-top: -5px; margin-bottom: 20px;}
 		@include tablette{width: calc(100% - 400px); font-size: 20px;}
 	}
 
@@ -59,14 +59,20 @@
 		&:hover::before{width: 100%;}
 	}
 
-	// Listes des menus de la carte et leur mise en pager
+	// Listes des menus de la carte et leur mise en page
 	@mixin carte-liste{
 		font-size: 20px; margin-top: 50px;
 		@include mobile{font-size: 14px; margin: 0;}
 		@include tablette{font-size: 15px;}
 	}
-	@mixin carte-ul{list-style: none; padding: 0; margin: 0; line-height: 40px;}
-	@mixin carte-li{display: flex; justify-content: space-between;}
+	@mixin carte-ul{
+		list-style: none; padding: 0; margin: 0; line-height: 40px;
+		@include mobile{line-height: 20px;}
+	}
+	@mixin carte-li{
+		display: flex; justify-content: space-between;
+		@include mobile{margin-bottom: 20px; font-size: 13px;}
+	}
 
 
 
